--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
+
 .App {
   text-align: center;
 }
@@ -36,3 +39,4 @@
     transform: rotate(360deg);
   }
 }
+
